{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CharacterControls3D",
            "id": "b1462320-1ba9-4ce9-9c8c-4a2ac8520f00",
            "actions": [
                {
                    "name": "Click",
                    "type": "Value",
                    "id": "a38b8eb3-6d6e-4713-81ca-28e4cd3d8333",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseLook",
                    "type": "Value",
                    "id": "83b15768-4683-4f5f-8ed1-2dea9cf2ed89",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "5e39b801-12d9-4f4a-8e03-4fa5a311c7c7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Letgo",
                    "type": "Button",
                    "id": "09840fd3-f96e-4366-8b2d-caca59c0702c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cdd9989f-8ba9-43dd-9887-b3f622766276",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97b827b4-7aa7-4ffd-8f88-47c023e996d9",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d70b35f-fb7a-48bb-8111-7d20060f445b",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b33762df-f0b5-487d-9004-a24b0b17287e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5322fb5e-5e1d-43d8-bb07-2399758c366b",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93f1b05e-ea6a-4a6c-983b-eb896fb94a6b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Letgo",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CharacterControlsVR",
            "id": "b53bd604-c272-4526-8c91-24478389cc2f",
            "actions": [
                {
                    "name": "Teleport",
                    "type": "Button",
                    "id": "78235b33-a2a1-43bf-9695-fade98d31014",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "18e732c3-9258-4f54-b423-bedd90573495",
                    "path": "<XRSimulatedController>/triggerButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Teleport",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}